commiting width and heigth img

--- a/budget.html
+++ b/budget.html
@@ -52,10 +52,10 @@
                 <label for="silver">Silver Laptop <span> U$ 5199,00</span></label>
                 <div class="budget-details">
                     <ul class="font-1-xs">
-                        <li><img src="./img/icones/eletrica.svg" alt="">High-Performance Processor</li>
-                        <li><img src="./img/icones/carbono.svg" alt="">Ultra-Light Carbon Fiber Body</li>
-                        <li><img src="./img/icones/horario.svg" alt="">Up to 18 Hours Battery Life</li>
-                        <li><img src="./img/icones/rastreador.svg" alt="">Built-in Security & Tracking</li>
+                        <li><img width="24" height="24" src="./img/icones/eletrica.svg" alt="">High-Performance Processor</li>
+                        <li><img width="24" height="24" src="./img/icones/carbono.svg" alt="">Ultra-Light Carbon Fiber Body</li>
+                        <li><img width="24" height="24" src="./img/icones/horario.svg" alt="">Up to 18 Hours Battery Life</li>
+                        <li><img width="24" height="24" src="./img/icones/rastreador.svg" alt="">Built-in Security & Tracking</li>
                     </ul>
                     <img src="./img/fotos/notebook.png" alt="">
                 </div>
@@ -64,10 +64,10 @@
                 <label for="gray">Gray Laptop <span> U$ 5599,00</span></label>
                 <div class="budget-details">
                     <ul class="font-1-xs">
-                        <li><img src="./img/icones/eletrica.svg" alt="">High-Performance Processor</li>
-                        <li><img src="./img/icones/carbono.svg" alt="">Ultra-Light Carbon Fiber Body</li>
-                        <li><img src="./img/icones/horario.svg" alt="">Up to 18 Hours Battery Life</li>
-                        <li><img src="./img/icones/rastreador.svg" alt="">Built-in Security & Tracking</li>
+                        <li><img width="24" height="24" src="./img/icones/eletrica.svg" alt="">High-Performance Processor</li>
+                        <li><img width="24" height="24" src="./img/icones/carbono.svg" alt="">Ultra-Light Carbon Fiber Body</li>
+                        <li><img width="24" height="24" src="./img/icones/horario.svg" alt="">Up to 18 Hours Battery Life</li>
+                        <li><img width="24" height="24" src="./img/icones/rastreador.svg" alt="">Built-in Security & Tracking</li>
                     </ul>
                     <img src="./img/fotos/notebook2.jpg" alt="">
                 </div>
@@ -76,10 +76,10 @@
                 <label for="gold">Gold Laptop <span> U$ 6199,00</span></label>
                 <div class="budget-details">
                     <ul class="font-1-xs">
-                        <li><img src="./img/icones/eletrica.svg" alt="">High-Performance Processor</li>
-                        <li><img src="./img/icones/carbono.svg" alt="">Ultra-Light Carbon Fiber Body</li>
-                        <li><img src="./img/icones/horario.svg" alt="">Up to 18 Hours Battery Life</li>
-                        <li><img src="./img/icones/rastreador.svg" alt="">Built-in Security & Tracking</li>
+                        <li><img width="24" height="24" src="./img/icones/eletrica.svg" alt="">High-Performance Processor</li>
+                        <li><img width="24" height="24" src="./img/icones/carbono.svg" alt="">Ultra-Light Carbon Fiber Body</li>
+                        <li><img width="24" height="24" src="./img/icones/horario.svg" alt="">Up to 18 Hours Battery Life</li>
+                        <li><img width="24" height="24" src="./img/icones/rastreador.svg" alt="">Built-in Security & Tracking</li>
                     </ul>
                     <img src="./img/fotos/notebook3.jpg" alt="">
                 </div>
@@ -172,9 +172,9 @@
                 <li>2450, Tech Valley Road, Suite 500,</br> New York, NY 10001, USA</li>
             </ul>
             <div class="footer-media">
-                <a href=""><img src="./img/redes/instagram.svg" alt="Instagram"></a>
-                <a href=""><img src="./img/redes/facebook.svg" alt="Facebook"></a>
-                <a href=""><img src="./img/redes/youtube.svg" alt="Youtube"></a>
+                <a href=""><img width="32px" height="32px" src="./img/redes/instagram.svg" alt="Instagram"></a>
+                <a href=""><img width="32px" height="32px" src="./img/redes/facebook.svg" alt="Facebook"></a>
+                <a href=""><img width="32px" height="32px" src="./img/redes/youtube.svg" alt="Youtube"></a>
             </div>
         </div>
         <div>
