--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
                 <p class="font-2-l c-p">High-performance and precision-crafted laptops, customized to fit your needs. Experience the best in speed and efficiency with TechCraft.</p>
                 <a class="button g_b g_bg" href="./laptops.html">choose yours</a>
             </div>
-            <div>
-                <img src="./img/fotos/notebook7.jpg" alt="Gray Laptop on the table">
-            </div>
+            <picture>
+                <source media="(max-width: 800px)" srcset="../img/fotos/notebook7.jpg">
+                <img src="./img/fotos/notebook7.jpg" width="3516" height="5274" alt="Gray Laptop on the table">
+            </picture>
         </div>
     </main>
 
@@ -44,21 +45,21 @@
         <ul>
             <a href="./laptops/GrayLaptop.html">
                 <li>
-                    <img src="./img/fotos/notebook5.jpg" alt="" >
+                    <img src="./img/fotos/notebook5.jpg" width="3052" height="4524" alt="" >
                     <h3 class="font-1-xl">Gray Laptop</h3>
                     <span class="font-2-m c-b-3">U$ 5199,00</span>
                 </li>
             </a>
             <a href="./laptops/silverLaptop.html">
                 <li>
-                    <img class="img-2" src="./img/fotos/notebook6.jpg" alt="" >
+                    <img class="img-2" width="3456" height="4608" src="./img/fotos/notebook6.jpg" alt="" >
                     <h3 class="font-1-xl">Silver Laptop</h3>
                     <span class="font-2-m c-b-3">U$ 5599,00</span>
                 </li>
             </a>
             <a href="./laptops/goldLaptop.html">
                 <li>
-                    <img class="img-3" src="./img/fotos/notebook7.jpg" alt="" >
+                    <img class="img-3" width="3516" height="5274" src="./img/fotos/notebook7.jpg" alt="" >
                     <h3 class="font-1-xl">Gold Laptop</h3>
                     <span class="font-2-m c-b-3">U$ 6199,00</span>
                 </li>
@@ -75,19 +76,19 @@
                 <a class="link" href="./laptops.html">Choose your style</a>
                 <div class="tech-adv">
                     <div>
-                        <img src="./img/icones/eletrica.svg" alt="">
+                        <img width="24" height="24" src="./img/icones/eletrica.svg" alt="">
                         <h3 class="font-1-m c-b-7">Save Energy</h3>
                         <p class="font-2-s c-b-4">All of them have the best thecnology and has a battery that can be use for 18hs. It takes just 3 hours to fully charge the battery. Great to use every place and time.</p>
                     </div>
                     <div>
-                        <img src="./img/icones/rastreador.svg" alt="">
+                        <img width="24" height="24" src="./img/icones/rastreador.svg" alt="">
                         <h3 class="font-1-m c-b-7">Tracker</h3>
                         <p class="font-2-s c-b-4">The advanced tracker system that comes in your new machine, it's really powerfull and are fast, you can track in seconds. The track system is developed for us and has the best for you!</p>
                     </div>
                 </div>
             </div>
             <div class="tech-img">
-                <img src="./img/fotos/notebook4.jpg" alt="">
+                <img width="3648" height="4560" src="./img/fotos/notebook4.jpg" alt="">
             </div>
         </div>
     </article>
@@ -95,20 +96,20 @@
     <section class="partners" aria-label="Our Partners">
         <h2 class="font-1-xxl container">our partners<span class="sc">.</span></h2>
         <ul>
-            <li><img src="./img/parceiros/caravan.svg" alt="caravan"></li>
-            <li><img src="./img/parceiros/dogs.svg" alt="dogs"></li>
-            <li><img src="./img/parceiros/flexblog.svg" alt="flexblog"></li>
-            <li><img src="./img/parceiros/handel.svg" alt="handel"></li>
-            <li><img src="./img/parceiros/lescone.svg" alt="lescone"></li>
-            <li><img src="./img/parceiros/ranek.svg" alt="ranek"></li>
-            <li><img src="./img/parceiros/surfbot.svg" alt="surfbot"></li>
-            <li><img src="./img/parceiros/wildbeast.svg" alt="wildbeast"></li>
+            <li><img width="140" height="38" src="./img/parceiros/caravan.svg" alt="caravan"></li>
+            <li><img width="152" height="39" src="./img/parceiros/dogs.svg" alt="dogs"></li>
+            <li><img width="165" height="38" src="./img/parceiros/flexblog.svg" alt="flexblog"></li>
+            <li><img width="139" height="50" src="./img/parceiros/handel.svg" alt="handel"></li>
+            <li><img width="208" height="41" src="./img/parceiros/lescone.svg" alt="lescone"></li>
+            <li><img width="149" height="36" src="./img/parceiros/ranek.svg" alt="ranek"></li>
+            <li><img width="200" height="49" src="./img/parceiros/surfbot.svg" alt="surfbot"></li>
+            <li><img width="196" height="34" src="./img/parceiros/wildbeast.svg" alt="wildbeast"></li>
         </ul>
     </section>
 
     <section class="testimony">
         <div>
-            <img src="./img/testimony/test1.jpg" alt="person using the laptop 1">
+            <img width="4460" height="2973" src="./img/testimony/test1.jpg" alt="person using the laptop 1">
         </div>
         <div class="testimony-content">
             <blockquote class="font-1-xl c-b-4">
@@ -162,9 +163,9 @@
                 <li>2450, Tech Valley Road, Suite 500,</br> New York, NY 10001, USA</li>
             </ul>
             <div class="footer-media">
-                <a href=""><img src="./img/redes/instagram.svg" alt="Instagram"></a>
-                <a href=""><img src="./img/redes/facebook.svg" alt="Facebook"></a>
-                <a href=""><img src="./img/redes/youtube.svg" alt="Youtube"></a>
+                <a href=""><img width="32px" height="32px" src="./img/redes/instagram.svg" alt="Instagram"></a>
+                <a href=""><img width="32px" height="32px" src="./img/redes/facebook.svg" alt="Facebook"></a>
+                <a href=""><img width="32px" height="32px" src="./img/redes/youtube.svg" alt="Youtube"></a>
             </div>
         </div>
         <div>
