commiting js changes

--- a/index.html
+++ b/index.html
@@ -43,21 +43,21 @@
         <h2 class="font-1-xxl container">Choose Yours<span class="sc">.</span></h2>
 
         <ul>
-            <a href="./laptops/GrayLaptop.html">
+            <a href="./laptops/gray.html">
                 <li>
                     <img src="./img/fotos/notebook5.jpg" width="3052" height="4524" alt="" >
                     <h3 class="font-1-xl">Gray Laptop</h3>
                     <span class="font-2-m c-b-3">U$ 5199,00</span>
                 </li>
             </a>
-            <a href="./laptops/silverLaptop.html">
+            <a href="./laptops/silver.html">
                 <li>
                     <img class="img-2" width="3456" height="4608" src="./img/fotos/notebook6.jpg" alt="" >
                     <h3 class="font-1-xl">Silver Laptop</h3>
                     <span class="font-2-m c-b-3">U$ 5599,00</span>
                 </li>
             </a>
-            <a href="./laptops/goldLaptop.html">
+            <a href="./laptops/gold.html">
                 <li>
                     <img class="img-3" width="3516" height="5274" src="./img/fotos/notebook7.jpg" alt="" >
                     <h3 class="font-1-xl">Gold Laptop</h3>
@@ -186,6 +186,6 @@
 
 
 
-    <script src="./script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
